Update social links

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               </a>
             </div>
             <div class="social-link">
-              <a href="tel:+1234567890" target="_blank">
+              <a href="tel:+18014033512" target="_blank">
                 <i class="fas fa-phone"></i>
               </a>
             </div>
@@ -547,12 +547,17 @@
               </a>
             </div>
             <div class="social-link">
-              <a href="https://www.instagram.com/yourprofile" target="_blank">
+              <a href="https://leetcode.com/akashkhatrii" target="_blank">
+                <i class="fas fa-code"></i>
+              </a>
+            </div>
+            <div class="social-link">
+              <a href="https://www.instagram.com/_akashkhatri" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
             <div class="social-link">
-              <a href="skype:yourprofile?call" target="_blank">
+              <a href="skype:live:.cid.b52577c47004901d" target="_blank">
                 <i class="fab fa-skype"></i>
               </a>
             </div>
