Update projects section

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 
     <link rel="stylesheet" href="style.css" />
     <title>Akash Khatri</title>
@@ -62,7 +62,7 @@
           <h1>Akash Khatri</h1>
           <h2>Software Developer Extraordinaire</h2>
           <p>
-            Currently pursuing my Master's in Computer Science at the University of Utah, I have had hands-on experience building web applications and websites, with a strong expertise in developing user interfaces using React.js. I am also advancing my skills in full stack development with the MERN stack while also exploring the realms of AI and NLP through research on large language models.  My journey is all about blending creativity with tech to solve real-world problems and keep pushing the boundaries of what's possible.
+            Currently pursuing my Master's in Computer Science at the University of Utah, I have had hands-on experience building web applications and websites, with a strong expertise in developing user interfaces using React.js. I am advancing my skills in full stack development with MERN stack while also exploring the realms of AI and NLP through research on large language models. My journey is all about blending creativity with tech to solve real-world problems and keep pushing the boundaries of what's possible.
 
 
           </p>
@@ -295,7 +295,8 @@
 
                   <div class="info">
                     <ul>
-                      <li>Crafted a prototype web app to connect local service providers with users, increasing local business visibility.</li>
+                      <li>Built a prototype web app using Node.js, EJS, and MongoDB to connect local service providers with users, boosting local business visibility.</li>
+                      <li>Utilized HTML, CSS, and JavaScript for the frontend to ensure a responsive and user-friendly interface.</li>
                       <li>Improved user experience by implementing features for service selection, account creation, and appointment scheduling.</li>
                     </ul>
 
@@ -326,7 +327,7 @@
                 <div class="card-content">
                   <p>
                     <a
-                      href="http://github.com/AkashKhatrii/ParaClone"
+                      href="https://github.com/AkashKhatrii/CNNs_for_text_classification"
                       target="_blank"
                       ><i class="fas fa-link"></i>CNNs for Text Classification
                     </a>
@@ -337,6 +338,26 @@
                       <li>Tailored Convolutional Neural Networks for sentence classification in NLP, resulting in an 8% increase in f1 scores by fine-tuning models.</li>
                       <li>Improved f1 scores on the SST dataset by utilizing GloVe and fastText embeddings, achieving scores of 84 and 84.4, respectively, compared to 82.5 and 80 with static embeddings.</li>
                       <li>Explored the efficacy of CNNs in textual data processing, contributing valuable insights to NLP research.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card" id="card-3">
+                <div class="card-content">
+                  <p>
+                    <a
+                      href="http://github.com/AkashKhatrii/ParaClone"
+                      target="_blank"
+                      >Onestop
+                    </a>
+                  </p>
+
+                  <div class="info">
+                    <ul>
+                      <li>Developed a full-stack e-commerce web application, specializing in clothing retail.</li>
+                      <li>Designed a cart feature to enable seamless item addition, management, and purchase.</li>
+                      <li>Integrated Stripe for payment processing, ensuring secure and reliable transaction</li>
                     </ul>
                   </div>
                 </div>
@@ -362,8 +383,8 @@
                   <div class="card-content">
                     <p>
                       <a
-                        href="#projects"
-                        >Road Damage Detection and Classification</a
+                        href="https://github.com/AkashKhatrii/Road_Damage_Detection"
+                        ><i class="fas fa-link"></i>Road Damage Detection and Classification</a
                       >
                     </p>
 
@@ -400,6 +421,26 @@
                       
                           ></i>here
                         </a> to see the instructions to use the demo.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card" id="card-3">
+                  <div class="card-content">
+                    <p>
+                      <a
+                        href="https://github.com/AkashKhatrii/random-quote-generator"
+                        target="_blank"
+                        ><i class="fas fa-link"></i>Random Quote Generator
+                      </a>
+                      <span id="teeter_demo"><a href="https://random-quote-generator-gamma-teal.vercel.app/">Demo</a></span>
+                    </p>
+
+                    <div class="info">
+                      <ul>
+                        <li>Developed a Random Quote Generator using React.js, fetching quotes from a third-party API to dynamically display new quotes with each button click.</li>
+                        <li>mplemented responsive design and efficient state management using React hooks, ensuring a clean user interface and smooth user experience.</li>
                       </ul>
                     </div>
                   </div>
