Update intro headline

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class='about-intro'>
           <p id='name'>Hello, my name is</p>
           <h1>Akash Khatri</h1>
-          <h2>Software Developer</h2>
+          <h2>Full Stack Developer</h2>
           <p>
             Currently pursuing my Master's in Computer Science at the University of Utah, I have had hands-on experience building web applications and websites, with a strong expertise in developing user interfaces using React.js. I am advancing my skills in full stack development with MERN stack while also exploring the realms of AI and NLP through research on large language models. My journey is all about blending creativity with tech to solve real-world problems and keep pushing the boundaries of what's possible.
 
