Add email functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 
     <link rel="stylesheet" href="style.css" />
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script defer src="script.js"></script>
     <title>Akash Khatri</title>
   </head>
 
@@ -139,14 +142,14 @@
               <h3>University of Utah, <span>Aug 2023 - May 2025</span></h3>
               <span class="degree">Master's in Computer Science, CGPA: 4.0/4.0</span>
               <br>
-              <span class="coursework"><span>Coursework:</span> Advanced Algorithms, Computer Architecture, NLP with Deep Learning</span>
+              <span class="coursework"><span>Coursework:</span> Advanced Algorithms, Computer Architecture, NLP with Deep Learning, <br> Manage Data with & for ML, Operating Systems</span>
             </div>
 
             <div class="ed">
               <h3>University of Mumbai, <span>Aug 2019 - May 2023</span></h3>
               <span class="degree">BE in Computer Engineering, CGPA: 9.64/10</span>
               <br>
-              <span class="coursework"><span>Coursework:</span> Data Structures, Artificial Intelligence, Machine Learning, Advanced DBMS,<br> Operating Systems,
+              <span class="coursework"><span>Coursework:</span> Data Structures, Artificial Intelligence, Machine Learning, Advanced DBMS,<br>
                 Cloud Computing, Object Oriented Programming, Big Data Analytics</span>
             </div>
           </div>
@@ -189,8 +192,11 @@
             <div class='grid-item'>
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original-wordmark.svg" />
             </div>
-            <div class='grid-item'>
+            <!-- <div class='grid-item'>
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" />
+            </div> -->
+            <div class="grid-item">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" />
             </div>
             <div class='grid-item'>
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
