--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class='about-intro'>
           <p id='name'>Hello, my name is</p>
           <h1>Akash Khatri</h1>
-          <h2>Full Stack Developer</h2>
+          <span id="element">Full Stack Developer</span>
           <p>
             Currently pursuing my Master's in Computer Science at the University of Utah, I have had hands-on experience building web applications and websites, with a strong expertise in developing user interfaces using React.js. I am advancing my skills in full stack development with MERN stack while also exploring the realms of AI and NLP through research on large language models. My journey is all about blending creativity with tech to solve real-world problems and keep pushing the boundaries of what's possible.
 
@@ -615,5 +615,18 @@
         </div>
         
       </section>
+
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+      var typed = new Typed("#element", {
+        strings: [
+          "Full Stack Developer",
+          "Computer Science Student",
+          "ML Enthusiast",
+          "Emerging Software Engineer",
+        ],
+        typeSpeed: 60,
+      });
+    </script>
   </body>
 </html>
