--- a/index.html
+++ b/index.html
@@ -621,9 +621,8 @@
       var typed = new Typed("#element", {
         strings: [
           "Full Stack Developer",
-          "Computer Science Student",
           "ML Enthusiast",
-          "Emerging Software Engineer",
+          "Software Engineer",
         ],
         typeSpeed: 60,
       });
