--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h1>Akash Khatri</h1>
           <span id="element">Full Stack Developer</span>
           <p>
-            Currently pursuing my Master's in Computer Science at the University of Utah, I have had hands-on experience building web applications and websites, with a strong expertise in developing user interfaces using React.js. I am advancing my skills in full stack development with MERN stack while also exploring the realms of AI and NLP through research on large language models. My journey is all about blending creativity with tech to solve real-world problems and keep pushing the boundaries of what's possible.
+            Pursuing my Master's in Computer Science at the University of Utah, I have had hands-on experience building web applications and websites, with a strong expertise in developing user interfaces using React.js. I am advancing my skills in full stack development with MERN stack while also exploring the realms of AI and NLP through research on large language models. Currently, I am building <a href="https://collab-hub-lac.vercel.app" target="_blank" style="color: #006af9">CollabHub</a>, an innovative platform aimed at connecting students for project collaborations. My journey is all about blending creativity with tech to solve real-world problems and keep pushing the boundaries of what's possible.
 
 
           </p>
@@ -228,8 +228,11 @@
               <br>
               <div class="info">
                 <ol>
-                  <li>Conducted advanced research on semantic sorting using LLMs under the guidance of Prof. El Kindi, focusing on <br>optimizing data management.</li>
-                  <li>Developed sophisticated models that generate sorting suggestions based on semantic relationships, enhancing data <br>organization and retrieval efficiency by leveraging contextual and hierarchical data understanding.</li>
+                  <li>Conducted advanced research on semantic sorting using LLMs under the guidance of Prof. El Kindi, optimizing data
+                    management by refining prompts and achieving a 40% reduction in sorting time and significant improvements in sorting
+                    accuracy and efficiency.</li>
+                  <li>Enhanced data organization and retrieval efficiency by 30% by developing sophisticated models that leverage contextual
+                    and hierarchical data understanding to generate accurate semantic sorting suggestions.</li>
                 </ol>
               </div>
             </div>
@@ -600,16 +603,16 @@
                 <i class="fas fa-code"></i>
               </a>
             </div>
-            <div class="social-link">
+            <!-- <div class="social-link">
               <a href="https://www.instagram.com/_akashkhatri" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
-            </div>
-            <div class="social-link">
+            </div> -->
+            <!-- <div class="social-link">
               <a href="skype:live:.cid.b52577c47004901d" target="_blank">
                 <i class="fab fa-skype"></i>
               </a>
-            </div>
+            </div> -->
           </div>
           <div class="footer-credits">Designed by <span>Akash Khatri</span></div>
         </div>
