update map and add collabhub project

--- a/index.html
+++ b/index.html
@@ -292,6 +292,33 @@
           
           <div class="projects-wrapper">
             <div id="column1">
+
+              <div class="card" id="card-1">
+                <div class="card-content">
+                  <p>
+                    <a
+                      href=""
+                      target="_blank"
+                      >CollabHub</a
+                    >
+
+                    <span id="teeter_demo"><a href="https://collab-hub-lac.vercel.app" target="_blank">Demo</a></span>
+                  </p>
+
+                  <div class="info">
+                    <ul>
+                      <li>Developed a full-stack web application using React.js, Node.js, and MongoDB, enabling students and developers to
+                        connect for mentorship and project collaboration based on shared technologies and interests</li>
+                      <li>Integrated Firebase Realtime Database for seamless, real-time chat functionality, allowing users to initiate and
+                        maintain project-related discussions.</li>
+                      <li>Deployed the frontend on Vercel and backend on Railway, ensuring a scalable and efficient architecture while delivering
+                        a user-friendly interface for profile management, project showcasing, and skill discovery.</li>
+                    </ul>
+
+                  </div>
+                </div>
+              </div>
+
               <div class="card" id="card-1">
                 <div class="card-content">
                   <p>
@@ -354,25 +381,6 @@
                 </div>
               </div>
 
-              <div class="card" id="card-3">
-                <div class="card-content">
-                  <p>
-                    <a
-                      href="http://github.com/AkashKhatrii/ParaClone"
-                      target="_blank"
-                      >Onestop
-                    </a>
-                  </p>
-
-                  <div class="info">
-                    <ul>
-                      <li>Developed a full-stack e-commerce web application, specializing in clothing retail.</li>
-                      <li>Designed a cart feature to enable seamless item addition, management, and purchase.</li>
-                      <li>Integrated Stripe for payment processing, ensuring secure and reliable transaction</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
             <!-- <div class="card" id="card-2">
               <div class="card-content">
                 <p>
@@ -452,6 +460,26 @@
                       <ul>
                         <li>Developed a Random Quote Generator using React.js, fetching quotes from a third-party API to dynamically display new quotes with each button click.</li>
                         <li>mplemented responsive design and efficient state management using React hooks, ensuring a clean user interface and smooth user experience.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card" id="card-3">
+                  <div class="card-content">
+                    <p>
+                      <a
+                        href="http://github.com/AkashKhatrii/ParaClone"
+                        target="_blank"
+                        >Onestop
+                      </a>
+                    </p>
+  
+                    <div class="info">
+                      <ul>
+                        <li>Developed a full-stack e-commerce web application, specializing in clothing retail.</li>
+                        <li>Designed a cart feature to enable seamless item addition, management, and purchase.</li>
+                        <li>Integrated Stripe for payment processing, ensuring secure and reliable transaction</li>
                       </ul>
                     </div>
                   </div>
@@ -562,7 +590,7 @@
 
           <div class='contact-map'>
             <figure>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.8510184179845!2d-111.87485672433581!3d40.76530137138555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f56e384f4a97%3A0x7b065ede3b27cd2c!2s645%20E%20200%20S%2C%20Salt%20Lake%20City%2C%20UT%2084102%2C%20USA!5e0!3m2!1sen!2sin!4v1720312712432!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" loading="eager"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.9182454759034!2d-111.8684682240797!3d40.763822834441555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f565ccc5c703%3A0x270e8db23e81c3b4!2s250%20900%20E%2C%20Salt%20Lake%20City%2C%20UT%2084102!5e0!3m2!1sen!2sus!4v1723831699206!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" loading="eager"></iframe>
             </figure>
 
           </div>
