--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
 
             <div class="ed">
-              <h3>BE in Computer Engineering, <span>Aug 2019 - May 2023</span></h3>
+              <h3>Bachelors in Computer Engineering, <span>Aug 2019 - May 2023</span></h3>
               <span class="degree">University of Mumbai, GPA: 9.64/10</span>
               <br>
               <p class="coursework"><span>Coursework:</span> Data Structures, Artificial Intelligence, Machine Learning, Advanced DBMS,<br>
