make changes in experience

--- a/index.html
+++ b/index.html
@@ -249,35 +249,38 @@
           <div class="internship_info">
             
             <div class="intern">
-              <h3> University of Utah, <span>May 2024 - Present</span></h3>
-              <span class="position">Research Assistant</span>
+              <h3>Research Assistant, <span>May 2024 - Present</span></h3>
+              <span class="position">University of Utah</span>
               <br>
               <div class="info">
                 <ul>
-                  <li>Conducted advanced research on semantic sorting using LLMs under the guidance of Prof. El Kindi, optimizing data
-                    management by refining prompts and achieving a 40% reduction in sorting time and significant improvements in sorting
-                    accuracy and efficiency.</li>
-                  <li>Enhanced data organization and retrieval efficiency by 30% by developing sophisticated models that leverage contextual
-                    and hierarchical data understanding to generate accurate semantic sorting suggestions.</li>
+                  <li>Conducted research using OpenAI’s GPT models via API to perform semantic sorting of datasets and datalakes across 5 tasks,
+                    uncovering meaningful column relationships and improving sorting accuracy by 30%.</li>
+                  <li>Designed and optimized over 40 prompts using Levenshtein distance to evaluate sorting suggestions, expecting to reduce
+                    redundant suggestions by 50% and increasing sorting efficiency.</li>
+                    <li>Built a React.js and Flask-based interface for dataset uploads and sorting, with OpenAI-powered suggestions and highlighted
+                      sorting criteria for clearer insights.</li>
                 </ul>
               </div>
             </div>
 
             <div class="intern">
-              <h3> University of Utah, <span>Jan 2024 - May 2024</span></h3>
-              <span class="position">Graduate Teaching Assistant for Web Software Development & Adv Algorithms</span>
+              <h3>Graduate Teaching Assistant for Web Software Development & Adv Algorithms, <span>Jan 2024 - May 2024</span></h3>
+              <span class="position">University of Utah</span>
               <br>
               <div class="info">
                 <ul>
-                  <li>Facilitated in teaching full stack development to 80+ students, focusing on React.js, FastAPI, SQLite and AWS for deployment; held office hours to resolve student queries and grade assignments.</li>
-                  <li>Collaborated in weekly meetings to discuss course progress and plan future assignments, ensuring effective course delivery.</li>
+                  <li>Facilitated teaching of Full Stack Development and Adv. Algorithms to 180+ students, focusing on React.js, FastAPI, SQLite,
+                    AWS for deployment, and complex algorithmic design; conducted office hours to resolve student queries and grade assignments.</li>
+                  <li>Mentored students on coding standards, testing strategies, algorithmic design, and deployment best practices, contributing to
+                    enhanced assignment quality and alignment with industry standards.</li>
                 </ul>
               </div>
             </div>
             
             <div class="intern">
-              <h3>Exposys Data Labs, <span>June 2021 - July 2021</span></h3>
-              <span class="position">Full Stack web Developer Intern</span>
+              <h3>Full Stack web Developer Intern, <span>June 2021 - July 2021</span></h3>
+              <span class="position">Exposys Data Labs</span>
               <br>
               <div class="info">
                 <ul>
@@ -289,8 +292,8 @@
             </div>
 
             <div class="intern">
-              <h3>Enovate Skill, <span>June 2020 - July 2020</span></h3>
-              <span class="position">Internet of Things Trainee</span>
+              <h3>Internet of Things Trainee, <span>June 2020 - July 2020</span></h3>
+              <span class="position">Enovate Skill</span>
               <br>
               <div class="info">
                 <ul>
