add collabhub image

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <div class="card-content">
                   <!-- <img src="Akash_Oracle.png" alt="Project Image"> -->
                   <div class="image-container">
-                    <img src="bg.jpg" alt="Project Image">
+                    <img src="Collabhub.png" alt="Project Image">
                     <div class="overlay">
                       <a href="project_link" target="_blank"><i class="fas fa-eye"></i></a>
                     </div>
