Change color scheme

--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
       </section>
     </div>
 
+    <!-- <section id="about-me">
+      <p>Hi</p>
+    </section> -->
+
     <!-- Education -->
     <div class="scroll">
       <section id="education">
@@ -207,6 +211,8 @@
         </div>
       </section> -->
 
+      
+
       <section id='languages'>
         <div class='languages-wrapper'>
             <div class="heading">
@@ -254,8 +260,8 @@
               <br>
               <div class="info">
                 <ul>
-                  <li>Conducted research using OpenAI’s GPT models via API to perform semantic sorting of datasets and datalakes across 5 tasks,
-                    uncovering meaningful column relationships and improving sorting accuracy by 30%.</li>
+                  <li>Integrated OpenAI’s GPT APIs to develop advanced semantic sorting algorithms for datasets and data lakes across 5 key
+                    tasks, uncovering meaningful column relationships and improving sorting accuracy.</li>
                   <li>Designed and optimized over 40 prompts using Levenshtein distance to evaluate sorting suggestions, expecting to reduce
                     redundant suggestions by 50% and increasing sorting efficiency.</li>
                     <li>Built a React.js and Flask-based interface for dataset uploads and sorting, with OpenAI-powered suggestions and highlighted
@@ -284,9 +290,12 @@
               <br>
               <div class="info">
                 <ul>
-                  <li>Led development of Nostalgia, a website for sharing memories through photos and narratives, using HTML, CSS, JavaScript, Node.js, and MongoDB.</li>
-                  <li>Enhanced user engagement by adding interactive commenting and saving features, fostering a connected user community.</li>
-                  <li>Built a user-friendly blogging platform with seamless REST API integration, significantly increasing user engagement and content creation.</li>
+                  <li>Led development of Nostalgia, a memory-sharing platform built with JavaScript, Node.js, and MongoDB; implemented MVC
+                    architecture and optimized database queries to enhance scalability and performance.</li>
+                  <li>Boosted user engagement by introducing interactive features like commenting and memory-saving, significantly enhancing user
+                    interaction and content sharing.</li>
+                  <li>Developed over 9 RESTful APIs using Node.js, integrating Passport for authentication and Multer for file storage, ensuring
+                    secure data handling and efficient content management.</li>
                 </ul>
               </div>
             </div>
