--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h1>Tushar Khatri</h1>
           <span id="element">Full Stack Developer</span>
           <p>
-            Pursuing my Master's in Computer Science at the Indiana University Bloomington, I specialize in full stack development with the MERN stack, and have hands-on experience building web applications and dynamic user interfaces using React.js. My journey extends beyond web development into the fields of machine learning and natural language processing (NLP), where I’m actively conducting research on large language models and exploring their applications in real-world scenarios. Currently, I’m developing <a href="https://collab-hub-lac.vercel.app" target="_blank" style="color: #006af9">CollabHub</a>, an innovative platform designed to connect students for project collaborations. I love combining creativity and technology to tackle challenges in software development, AI, and data-driven problem-solving
+            Pursuing my Master's in Computer Science at the Indiana University Bloomington, I specialize in full stack development with the MERN stack, and have hands-on experience building web applications and dynamic user interfaces using React.js. My journey extends beyond web development into the fields of machine learning and Artificial Intelligence, where I’m actively conducting research on large language models and exploring their applications in real-world scenarios. I love combining creativity and technology to tackle challenges in software development, AI, and data-driven problem-solving
 
           </p>
           <button onclick="window.open('https://www.linkedin.com/in/tusharkhatri08/', '_blank')">Connect with me</button>
@@ -283,7 +283,7 @@
                   product details including names and prices while reducing manual entry time
                 </li>                
                     <li>
-                      Streamlined Data manipulation by utilizing Pandas and storage solutions by implementing MongoDB for organizing scraped
+                       Streamlined Data manipulation by utilizing Pandas and storage solutions by implementing MongoDB for organizing scraped
                       data, reducing retrieval times while increasing overall efficiency.</li>
                 </ul>
               </div>
