--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               <ol>
                 <li>Participated in 4 intercollege hackathons and was top 10 in two of them.</li>
                 <li>Cleared level 1 of International Maths Olympiad
-                <li> Runner up of Blind Code Competition (code with monitor screen off) held in College</li>
+<!--                 <li> Runner up of Blind Code Competition (code with monitor screen off) held in College</li> -->
                 
                 <li>Served as IPR Coordinator at TSEC’s IIC (2022-2023), orchestrated innovation-focused events such as Ideathon, Projectathon, IPR
                   workshops, and managed Smart India Internal-Hackathon.</li>
