--- a/index.html
+++ b/index.html
@@ -421,14 +421,14 @@
                     <div class="image-container">
                       <img src="RDD.png" alt="Project Image">
                       <div class="overlay">
-                        <a href="https://github.com/AkashKhatrii/Road_Damage_Detection" target="_blank"><i class="fas fa-eye"></i></a>
+                        <a href="https://github.com/TUSHAR-KHATRI13/Olist-Ecommerce-Data-Pipeline" target="_blank"><i class="fas fa-eye"></i></a>
                       </div>
                     </div>
                     <p>
                       <a
-                        href="https://github.com/AkashKhatrii/Road_Damage_Detection"
-                        >Road Damage Detection and Classification</a
-                      >
+                        href="https://github.com/TUSHAR-KHATRI13/Olist-Ecommerce-Data-Pipeline"
+                        >OlistFlow: Real-Time eCommerce Data Pipeline
+
                     </p>
 
                     <div class="info">
@@ -441,7 +441,7 @@
                           </li>
                         <li>Designed a user-friendly web application, allowing users to upload road damage photos for real-time detection</li>
                       </ul> -->
-                      <p>A deep learning-based system that classifies and detects road damages like cracks and potholes in real-time, using a custom-trained model deployed through a user-friendly web interface.</p>
+                      <p>A real-time ETL pipeline for processing Olist eCommerce data, built using the Medallion architecture to ensure structured data ingestion, transformation, and efficient querying.</p>
                     </div>
                   </div>
                 </div>
