--- a/index.html
+++ b/index.html
@@ -415,37 +415,28 @@
 
         
 
-            <div id="column2">
-                <div class="card" id="card-4">
-                  <div class="card-content">
-                    <div class="image-container">
-                      <img src="RDD.png" alt="Project Image">
-                      <div class="overlay">
-                        <a href="https://github.com/TUSHAR-KHATRI13/Olist-Ecommerce-Data-Pipeline" target="_blank"><i class="fas fa-eye"></i></a>
-                      </div>
-                    </div>
-                    <p>
-                      <a
-                        href="https://github.com/TUSHAR-KHATRI13/Olist-Ecommerce-Data-Pipeline"
-                        >OlistFlow: Real-Time eCommerce Data Pipeline
-
-                    </p>
-
-                    <div class="info">
-                      <!-- <ul>
-                        <li>A deep learning-based road damage detection and classification system employing Faster R-CNN,
-                          YOLOv5, and SSD models.
-                          </li>
-                        <li>Ensured model robustness through curation of a diverse, high-quality dataset encompassing various road damage
-                          types, lighting conditions, and environments sourced from four different countries.
-                          </li>
-                        <li>Designed a user-friendly web application, allowing users to upload road damage photos for real-time detection</li>
-                      </ul> -->
-                      <p>A real-time ETL pipeline for processing Olist eCommerce data, built using the Medallion architecture to ensure structured data ingestion, transformation, and efficient querying.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="card" id="card-3">
+<div id="column2">
+  <div class="card" id="card-4">
+    <div class="card-content">
+      <div class="image-container">
+        <img src="RDD.png" alt="Project Image">
+        <div class="overlay">
+          <a href="https://github.com/TUSHAR-KHATRI13/Olist-Ecommerce-Data-Pipeline" target="_blank">
+            <i class="fas fa-eye"></i>
+          </a>
+        </div>
+      </div>
+      <p>
+        <a href="https://github.com/TUSHAR-KHATRI13/Olist-Ecommerce-Data-Pipeline" target="_blank" style="color: blue; text-decoration: underline;">
+          OlistFlow: Real-Time eCommerce Data Pipeline
+        </a>
+      </p>
+      <div class="info">
+        <p>A real-time ETL pipeline for processing Olist eCommerce data, built using the Medallion architecture to ensure structured data ingestion, transformation, and efficient querying.</p>
+      </div>
+    </div>
+  </div>
+</div>                <div class="card" id="card-3">
                   <div class="card-content">
                     <div class="image-container">
                       <img src="X-Crypto.png" alt="Project Image">
